# Brittlebench

./: CONTRIBUTING.md  Makefile  README.md  eval_scaffold.py  pyproject.toml  rewritable_task.py  submit_job.py
configs/: OLMo_1B_hf.yaml  Qwen2.5_7B.yaml  gpt5.yaml  gpt_oss_20B.yaml  kimi_k2.yaml  llama3.1_70B_multi_gpu.yaml  llama3.1_8B_multi_gpu.yaml  llama3.2_1B.yaml  llama3.2_1B_multi_gpu.yaml  llama3.3_70B_multi_gpu.yaml  llama4_scout_109B.yaml  ministral_8B_multi_gpu.yaml  qwen3_32B_multi_gpu.yaml  qwen3_4B.yaml  qwen3_8B.yaml  qwen3_8B_multi_gpu.yaml
experimental/: general_perturbations.ipynb  gsm8k.ipynb
src/brittlebench/: __init__.py
tests/: prompt_examples.py
tests/perturbations/: test_add_space_seq_perturbation.py  test_camel_case_perturbation.py  test_drop_options_perturbation.py  test_drop_stop_words_perturbation.py  test_emotion_perturbations.py  test_ignore_above_perturbation.py  test_latexify_perturbation.py  test_padding_perturbation.py  test_persona_peturbation.py  test_poe_perturbation.py  test_punct_spaces_perturbation.py  test_remove_types_perturbation.py  test_shuffle_choices_perturbation.py  test_shuffle_order_perturbation.py  test_symmetrical_operation_perturbation.py  test_to_class_perturbation.py  test_typo_peturbation.py  test_word_manipulation_perturbation.py
tests/rewrites/: test_drop_stop_words.py  test_registry.py  test_rewrite.py  test_rewrite_add_space_seq.py  test_rewrite_emotion_prompt.py  test_rewrite_ignore_above.py  test_rewrite_in_camel_case.py  test_rewrite_latexify_word_problems.py  test_rewrite_padding_prompt.py  (+10 more)
(+41 files in other folders)
