[project]
name = "brittlebench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "augly[text]>=1.0.0",
    "case-converter>=1.2.0",
    "datasets>=3.6.0",
    "fire>=0.7.0",
    "lm-eval",
    "pandas>=2.3.0",
    "pytest>=8.4.0",
    "submitit>=1.5.3",
    "vllm>=0.9.1",
    "wandb>=0.20.1",
    "transformers<4.54.0",
    "tenacity",
    "wordfreq"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
lm-eval = { path = "lm-evaluation-harness", editable = true }
